<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="PLACEHOLDER"
        android:id="@+id/currentName"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newName" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/changeNameButton"
        android:text="@string/changeName"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/goBackName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/goBack"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold" />

</LinearLayout>
